--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
     <artifactId>http</artifactId>
     <version>20070405</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+<dependency>
+    <groupId>redis.clients</groupId>
+    <artifactId>jedis</artifactId>
+    <version>2.9.0</version>
+</dependency>
 
  
 <dependency>
