--- a/pom.xml
+++ b/pom.xml
@@ -92,5 +92,11 @@
     <artifactId>gson</artifactId>
     <version>2.3.1</version>
 </dependency>
+
+<dependency>
+    <groupId>com.thoughtworks.xstream</groupId>
+    <artifactId>xstream</artifactId>
+    <version>1.4.8</version>
+</dependency>
     </dependencies>
 </project>
